Fixed delete sem on mobile

--- a/src/app/courses-panel/semester-panel.component.scss
+++ b/src/app/courses-panel/semester-panel.component.scss
@@ -46,6 +46,13 @@
   }
 
   @media (max-width: 375px) {
+    .cross {
+      display: block;
+      margin-top: -25px;
+    }
+  }
+
+  @media (max-width: 375px) {
     .semester-courses {
       padding-left: 5px !important;
       overflow-x: scroll;
